--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,25 +1,30 @@
 <!doctype html>
 <html lang="vi">
-  <head>
-    <meta charset="UTF-8" />
-    <link href="https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:wght@300;400;500;700&family=Montserrat:wght@400;700&family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
-    <link rel="icon" type="image/png" href="./logo.png" />
 
-    <!-- Mazer CSS -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/mazer@latest/dist/assets/css/main.min.css" />
-    
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
+<head>
+  <meta charset="UTF-8" />
+  <link
+    href="https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:wght@300;400;500;700&family=Montserrat:wght@400;700&family=Roboto:wght@300;400;500&display=swap"
+    rel="stylesheet">
+  <link rel="icon" type="image/png" href="./logo.png" />
 
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Shopee 2.0</title>
-  </head>
-  <body>
-    <div id="root"></div>
+  <!-- Mazer CSS -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/mazer@latest/dist/assets/css/main.min.css" />
 
-    <!-- Bootstrap JS -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+  <!-- Bootstrap CSS -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
 
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Shopee 2.0</title>
+</head>
+
+<body>
+  <div id="root"></div>
+
+  <!-- Bootstrap JS -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+
+  <script type="module" src="/src/main.jsx"></script>
+</body>
+
 </html>
